upgrade incident-arrest-analytics-staging-adapter to java 24